--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index_media.css">
+    <base href="http://topcredit.am/">
 </head>
 <body id="body">
     <div class="special_menu_burger" id="menu_burger">
