--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
     <title>Top Credit</title>
-    <base href="https://topcredit.am/">
+    <base href="/">
     <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index_media.css">
