--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
-                            <form action="">
+                            <form action="mailto:armen.safs@gmail.com" method="post" enctype="text/plain">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ">
                                 <input class="form_inp" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
