--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <form action="mailto:armen.safs@gmail.com" method="post" enctype="text/plain">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*">
-                                <input class="form_inp" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Հեռախոսահամար*">
+                                <input class="form_inp" type="tel" id="phone" name="phone" pattern="" placeholder="Հեռախոսահամար*">
                                 <input class="form_inp" type="number" id="money" name="money" placeholder="Վարկավորվող գումարի չափը*">
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
