--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
-                            <form action="mailto:armen.safs@gmail.com" method="post" enctype="text/plain">
+                            <form action="" onSubmit="MM_validateForm('name','','R','comments','','R'); return document.MM_returnValue" id="contactform">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*">
                                 <input class="form_inp" type="tel" id="phone" name="phone" pattern="" placeholder="Հեռախոսահամար*">
@@ -135,7 +135,7 @@
                                         <label for="no_two">Ոչ</label>
                                     </div>
                                 </div>
-                                <input class="btn_send_form" type="submit" value="Ուղղարկել Հայտը">
+                                <input class="btn_send_form" type="submit" value="Ուղղարկել Հայտը" formaction="confirmation.html" formmethod="POST" formtarget="_self" action="mailto:armen.saf@gmail.com">
                             </form>
                         </div>
                     </div>
