--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
                             <form action="" onSubmit="MM_validateForm('name','','R','comments','','R'); return document.MM_returnValue" id="contactform">
-                                <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*">
-                                <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*">
-                                <input class="form_inp" type="tel" id="phone" name="phone" pattern="" placeholder="Հեռախոսահամար*">
-                                <input class="form_inp" type="number" id="money" name="money" placeholder="Վարկավորվող գումարի չափը*">
+                                <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
+                                <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
+                                <input class="form_inp" type="tel" id="phone" name="phone" pattern="" placeholder="Հեռախոսահամար*" required="required">
+                                <input class="form_inp" type="number" id="money" name="money" placeholder="Վարկավորվող գումարի չափը*" required="required">
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
                                     <div class="radio_block">
