--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                  քարտով, լրացրեք օնլայն հայտը և ստացեք պատասխանը մի քանի րոպեի ընթացքում
                             </span>
                         </div>
-                        <div class="form_block">
+                        <div class="form_block" action="email.php" method="post">
                             <h4>Օնլայն հայտ!</h4>
                             <form action="">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
