--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script>
+<!--     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script> -->
     <title>Top Credit</title>
     <base href="/">
     <link rel="icon" href="img/logo.png">
@@ -202,7 +202,7 @@
                     <div class="map_call_block">
                         <div class="map_block">
                             <div class="map" id="map">
-                                <!-- <iframe width="636" height="682" id="gmap_canvas" src="https://maps.google.com/maps?q=yerevan%20%20%20%20%20%20%20%20%20&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe> -->
+                                <iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=yerevan%20tumanyan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                             </div>
                         </div>
                         <div class="call_img_phone_block">
