--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="what_option_block">
                             <div class="option_block">
                               <div class="option_block_img">
-                                <img src="img/s1.jpg" alt="image">
+                                <img src="img/1.jpg" alt="image">
                               </div>  
                               <p class="option_block_bg">Արագ հաստատում</p>
                               <span class="option_block_text">Գումարի ստացում հաշված րոպեների ընթացքում</span>
@@ -172,14 +172,14 @@
                             </div>
                             <div class="option_block">
                               <div class="option_block_img">
-                                <img src="img/s3.png" alt="image">
+                                <img src="img/3.png" alt="image">
                               </div>  
                               <p class="option_block_bg">Պարզ և հարմար</p>
                               <span class="option_block_text">Դիմելու հնարավորություն օրվա ցանկացած պահին՝ 24/7 ռեժիմով</span>
                             </div>
                             <div class="option_block">
                               <div class="option_block_img">
-                                <img src="img/s4.jpg" alt="image">
+                                <img src="img/4.jpg" alt="image">
                               </div>  
                               <p class="option_block_bg">Գումարի ստացում</p>
                               <span class="option_block_text">Գումարի ստացման լայն ընտրություն</span>
