--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             </div>
                             <div class="option_block">
                               <div class="option_block_img">
-                                <img src="img/3.png" alt="image">
+                                <img src="img/3.jpg" alt="image">
                               </div>  
                               <p class="option_block_bg">Պարզ և հարմար</p>
                               <span class="option_block_text">Դիմելու հնարավորություն օրվա ցանկացած պահին՝ 24/7 ռեժիմով</span>
