--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             </div>
                         </div>
                         <div class="call_img_phone_block">
-                            <img src="img/s5.jpg" alt="image">
+                            <img src="img/5.jpg" alt="image">
                             <p class="call_img_phone_text">Խորհդատվության համար կարող եք զանգահրել</p>
                             <span>
                                 <a href="tel:+37491015195">091015195</a> 
