--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             </div>
                             <div class="option_block">
                               <div class="option_block_img">
-                                <img src="img/s2.jpg" alt="image">
+                                <img src="img/2.jpg" alt="image">
                               </div>  
                               <p class="option_block_bg">Փաստաթղթեր</p>
                               <span class="option_block_text">Անձնագիր կամ ID քարտ</span>
