--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                                  քարտով, լրացրեք օնլայն հայտը և ստացեք պատասխանը մի քանի րոպեի ընթացքում
                             </span>
                         </div>
-                        <div class="form_block" action="email.php" method="post">
+                        <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
-                            <form action="">
+                            <form action="email.php" method="post">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
                                 <input class="form_inp" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" placeholder="Հեռախոսահամար*" required="required">
