--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
                                     <div class="radio_block">
-                                        <input type="radio" id="yes" name="yes_no" value="yes">
+                                        <input type="radio" id="yes" name="yes" value="yes">
                                         <label class="right_label" for="yes">Այո</label>
-                                        <input type="radio" id="no" name="yes_no" value="no">
+                                        <input type="radio" id="no" name="no" value="no">
                                         <label for="no">Ոչ</label>
                                     </div>
                                 </div>
                                 <div class="your_info">
                                     <p>Սև ցուցակ</p>
                                     <div class="radio_block">
-                                        <input type="radio" id="yes_two" name="yes_no_two" value="yes_two">
+                                        <input type="radio" id="yes_two" name="yes_two" value="yes_two">
                                         <label class="right_label" for="yes_two">Այո</label>
-                                        <input type="radio" id="no_two" name="yes_no_two" value="no_two">
+                                        <input type="radio" id="no_two" name="no_two" value="no_two">
                                         <label for="no_two">Ոչ</label>
                                     </div>
                                 </div>
