--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                         <label for="no_two">Ոչ</label>
                                     </div>
                                 </div>
-                                <input class="btn_send_form" type="submit" value="Ուղղարկել Հայտը" formaction="confirmation.html" formmethod="POST" formtarget="_self" action="mailto:armen.saf@gmail.com">
+                                <input class="btn_send_form" type="submit" value="Ուղղարկել Հայտը">
                             </form>
                         </div>
                     </div>
