--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--     <script async defer src="https://maps.googleapis.com/maps/api/js?callback=initMap"></script> -->
     <title>Top Credit</title>
     <base href="/">
+    <script src="script/gsap.min.js"></script>
     <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/index_media.css">
@@ -254,5 +255,6 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/scrypt.js" type="text/javascript"></script>
+    <script src="js/scriptsend.js"  type="text/javascript"></script>
 </body>
 </html>
