--- a/index.html
+++ b/index.html
@@ -255,6 +255,6 @@
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/scrypt.js" type="text/javascript"></script>
-    <script src="js/scriptsend.js"  type="text/javascript"></script>
+<!--     <script src="js/scriptsend.js"  type="text/javascript"></script> -->
 </body>
 </html>
