--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </span>
             <div class="min_a_mobile">
                 <a href="#page">Գլխավոր</a>
-                <a href="#form">Օնլայն հայտ</a>
+                <a href="#forms">Օնլայն հայտ</a>
                 <a href="#about_us">Մեր մասին</a>
                 <a href="#contact">Կոնտակտներ</a>
                 <a href="#contact">Հետադարձ կապ</a>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="nav_bar">
                         <a href="#page" class="web_nav">գլխավոր</a>
-                        <a href="#form" class="web_nav">օնլայն հայտ</a>
+                        <a href="#forms" class="web_nav">օնլայն հայտ</a>
                         <a href="#about_us" class="web_nav">մար մասին</a>
                         <a href="#contact" class="web_nav">կոնտակտներ</a>
                         <a href="#contact" class="web_nav">հետադարձ կապ</a>
@@ -72,7 +72,7 @@
                             <a href="tel:+37496000630">091015195</a> /
                             <a href="tel:+37496000630">091015195</a> -->
                         </p>
-                        <a class="online_form" href="#form">Լրացրեք օնլայն հայտ</a>
+                        <a class="online_form" href="#forms">Լրացրեք օնլայն հայտ</a>
                     </div>
                 </div>
             </section>
@@ -95,12 +95,12 @@
                             </span>
                         </div>
                         <div class="money_btn_block">
-                            <a class="money_btn" href="#form">Լրացրեք օնլայն հայտ</a>
+                            <a class="money_btn" href="#forms">Լրացրեք օնլայն հայտ</a>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="form_section" id="form">
+            <section class="form_section" id="forms">
                 <div class="wrapper">
                     <div class="info_form_block">
                         <div class="info_text_form_block">
