--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
-                            <form enctype="multipart/form-data" method="post" id="form" onsubmit="send(event, 'email.php')">
+                            <form method="post" id="form" onsubmit="send(event, 'email.php')">
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
                                 <input class="form_inp" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" placeholder="Հեռախոսահամար*" required="required">
