--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <input class="form_inp" type="text" id="fname" name="fname" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
                                 <input class="form_inp" type="tel" id="phone" name="phone" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" placeholder="Հեռախոսահամար*" required="required">
-                                <span class="typy_number_form">000-000-000</span>
+                                <span class="typy_number_form">000111222</span>
                                 <input class="form_inp" type="number" id="money" name="money" placeholder="Վարկավորվող գումարի չափը*" required="required">
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
