--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
-                            <form id="form" action="mailto:armen.safs@gmail.com" method="post" novalidate>
+                            <form id="form" action="mailto:armen.safs@gmail.com" method="post" novalidate enctype="text/plain">
                                 <input class="form_inp" type="text" id="fname" name="user_name" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="number" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
                                 <input class="form_inp" type="tel" id="phone" name="user_phone" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" placeholder="Հեռախոսահամար*" required="required">
