--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
                                     <div class="radio_block">
-                                        <input type="radio" id="yes" name="yes" value="yes">
+                                        <input type="checkbox" id="yes" name="yes" value="yes">
                                         <label class="right_label" for="yes">Այո</label>
-                                        <input type="radio" id="no" name="no" value="no">
+                                        <input type="checkbox" id="no" name="no" value="no">
                                         <label for="no">Ոչ</label>
                                     </div>
                                 </div>
