--- a/index.html
+++ b/index.html
@@ -199,9 +199,12 @@
                     <h5 class="our_block_title">Մեր Մասին</h5>
                     <div class="map_call_block">
                         <div class="map_block">
-                            <div class="map" id="map">
-                                <iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=yerevan%20tumanyan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                            </div>
+                            <p>
+                                Master Finance-ը խորհրդատվություն և ծառայություններ մատուցող, արագ և շահավետ
+                                պայմաններով գումար տրամադրող կազմակերպություն է։ Եթե ցանկանում եք ձեռք բերել 
+                                գումար և դժվարանում եք ընտրել ամենաշահավետ պայմաններով կազմակերպությունը, ապա
+                                Master Finance-ը Ձեզ հնարավորութուն կտա ձեռք բերել գումար շահավետ պայմաններով։
+                            </p>
                         </div>
                         <div class="call_img_phone_block">
                             <img src="img/5.jpg" alt="image">
