--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
                     <h5 class="our_block_title">Մեր Մասին</h5>
                     <div class="map_call_block">
                         <div class="map_block">
-                            <p>
-                                Master Finance-ը խորհրդատվություն և ծառայություններ մատուցող, արագ և շահավետ
+                            <p class="about_us_masin">
+                                Top Credit-ը խորհրդատվություն և ծառայություններ մատուցող, արագ և շահավետ
                                 պայմաններով գումար տրամադրող կազմակերպություն է։ Եթե ցանկանում եք ձեռք բերել 
                                 գումար և դժվարանում եք ընտրել ամենաշահավետ պայմաններով կազմակերպությունը, ապա
-                                Master Finance-ը Ձեզ հնարավորութուն կտա ձեռք բերել գումար շահավետ պայմաններով։
+                                Top Credit-ը Ձեզ հնարավորութուն կտա ձեռք բերել գումար շահավետ պայմաններով։
                             </p>
                         </div>
                         <div class="call_img_phone_block">
