--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h1 class="welcome_title">Մեզ հետ Դուք հեշտությամբ կլուծեք Ձեր ֆինանսական խնդիրները</h1>
                         <p class="welcome_text">!!! սև ցուցակով չդիմել</p>
                         <p class="welcome_phone">
-                            <a href="tel:+37433734404">033734404</a>
+                            <a href="tel:+37433734404">033734404&nbsp;&nbsp;</a>
                             <a href="tel:+37477734504">077734504</a> 
                         </p>
                         <a class="online_form" href="#forms">Լրացրեք օնլայն հայտ</a>
@@ -210,7 +210,7 @@
                             <img src="img/5.jpg" alt="image">
                             <p class="call_img_phone_text">Խորհդատվության համար կարող եք զանգահրել</p>
                             <span>
-                                <a href="tel:+37433734404">033734404</a>
+                                <a href="tel:+37433734404">033734404&nbsp;&nbsp;</a>
                                 <a href="tel:+37477734504">077734504</a>
                             </span>
                         </div>
@@ -237,7 +237,7 @@
                         <h6 class="footer_title">Կոնտակտներ</h6>
                         <span>Դիմելու հնարավորություն օրվա ցանկացած պահին՝ 24/7 ռեժիմով</span>
                         <p class="footer_phone_number">
-                            <a href="tel:+37433734404">033734404</a>
+                            <a href="tel:+37433734404">033734404&nbsp;&nbsp;</a>
                             <a href="tel:+37477734504">077734504</a>
                         </p>
                     </div>
