--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <form id="form" action="https://formspree.io/f/xyyldade" method="POST">
                                 <input class="form_inp" type="text" id="fname" name="user_name" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="text" id="birthday" name="birthday" placeholder="Ծննդյան ամսաթիվ*" required="required">
-                                <input class="form_inp" type="number" id="phone" name="user_phone" placeholder="Հեռախոսահամար*" required="required">
+                                <input class="form_inp" type="number" id="phone" name="Հեռախոսահամար" placeholder="Հեռախոսահամար*" required="required">
                                 <!-- <span class="typy_number_form">000111222</span> -->
                                 <input class="form_inp" type="number" id="money" name="money" placeholder="Վարկավորվող գումարի չափը*" required="required">
                                 <div class="your_info">
