--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="form_block">
                             <h4>Օնլայն հայտ!</h4>
                             <form id="form" action="https://formspree.io/f/xyyldade" method="POST">
-                                <input class="form_inp" type="text" id="fname" name="user_name" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
+                                <input class="form_inp" type="text" id="fname" name="Անուն, Ազգանուն, հայրանուն" placeholder="Անուն, Ազգանուն, Հայրանուն*" required="required">
                                 <input class="form_inp" type="text" id="birthday" name="Ծննդ․ ամսաթիվ" placeholder="Ծննդյան ամսաթիվ*" required="required">
                                 <input class="form_inp" type="number" id="phone" name="Հեռախոսահամար" placeholder="Հեռախոսահամար*" required="required">
                                 <!-- <span class="typy_number_form">000111222</span> -->
