--- a/index.html
+++ b/index.html
@@ -119,18 +119,18 @@
                                 <div class="your_info">
                                     <p>Գրանցված աշխատող</p>
                                     <div class="radio_block">
-                                        <input type="radio" id="yes" name="no_yes_two1" value="yes">
+                                        <input type="radio" id="yes" name="Գրանցված աշխատող" value="yes">
                                         <label class="right_label" for="yes">Այո</label>
-                                        <input type="radio" id="no" name="no_yes_two1" value="no">
+                                        <input type="radio" id="no" name="Գրանցված աշխատող" value="no">
                                         <label for="no">Ոչ</label>
                                     </div>
                                 </div>
                                 <div class="your_info">
                                     <p>Սև ցուցակ</p>
                                     <div class="radio_block">
-                                        <input type="radio" id="yes_two" name="no_yes_two" value="yes_two">
+                                        <input type="radio" id="yes_two" name="Սև ցուցակ" value="yes_two">
                                         <label class="right_label" for="yes_two">Այո</label>
-                                        <input type="radio" id="no_two" name="no_yes_two" value="no_two">
+                                        <input type="radio" id="no_two" name="Սև ցուցակ" value="no_two">
                                         <label for="no_two">Ոչ</label>
                                     </div>
                                 </div>
