--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="map_call_block">
                         <div class="map_block">
                             <p class="about_us_masin">
-                                &nbsp;&nbsp;Top Credit-ը խորհրդատվություն և ծառայություններ մատուցող, արագ և շահավետ
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Top Credit-ը խորհրդատվություն և ծառայություններ մատուցող, արագ և շահավետ
                                 պայմաններով գումար տրամադրող կազմակերպություն է։ Եթե ցանկանում եք ձեռք բերել 
                                 գումար և դժվարանում եք ընտրել ամենաշահավետ պայմաններով կազմակերպությունը, ապա
                                 Top Credit-ը Ձեզ հնարավորութուն կտա ձեռք բերել գումար շահավետ պայմաններով։
