--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         <div class="coment_slide_block">
                             <div class="coment_info">
                                 <div class="coment_name_star">
-                                    <span>Ani Vardanyan</span>
+                                    <span>Անի Վարդանյան</span>
                                     <div class="star_block">
                                         <a href="" class="star_active">
                                             <svg width="12" height="12" viewBox="0 0 12 12" fill="#ffe400" xmlns="http://www.w3.org/2000/svg">
@@ -267,7 +267,7 @@
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
-                                    <span>Ani Vardanyan</span>
+                                    <span>Մարինե Ավանեսյան</span>
                                     <div class="star_block">
                                         <a href="" class="star_active">
                                             <svg width="12" height="12" viewBox="0 0 12 12" fill="#ffe400" xmlns="http://www.w3.org/2000/svg">
@@ -325,7 +325,7 @@
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
-                                    <span>Ani Vardanyan</span>
+                                    <span>Գոռ Եփրեմյան</span>
                                     <div class="star_block">
                                         <a href="" class="star_active">
                                             <svg width="12" height="12" viewBox="0 0 12 12" fill="#ffe400" xmlns="http://www.w3.org/2000/svg">
