--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
-                                    <span>Մարինե Ավանեսյան</span>
+                                    <span>Արման Փիլոյան</span>
                                     <div class="star_block">
                                         <a href="" class="star_active">
                                             <svg width="12" height="12" viewBox="0 0 12 12" fill="#ffe400" xmlns="http://www.w3.org/2000/svg">
