--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <span class="coment_info_text">type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent...
-                                    make a type specimen book. It has survived not</span>
+                                <span class="coment_info_text">Շատ շնորհակալություն արագ արձագանքելու համար։</span>
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
@@ -320,8 +319,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <span class="coment_info_text">type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent...
-                                    make a type specimen book. It has survived not</span>
+                                <span class="coment_info_text">Շատ շնորհակալություն արագ արձագանքելու համար։</span>
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
@@ -378,8 +376,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <span class="coment_info_text">type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent...
-                                    make a type specimen book. It has survived not</span>
+                                <span class="coment_info_text">Շատ շնորհակալություն արագ արձագանքելու համար։</span>
                             </div>  
                         </div>
                     </div>
