--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <span class="coment_info_text">Շատ շնորհակալություն արագ արձագանքելու համար։</span>
+                                <span class="coment_info_text">Հրաշալի սպասարկում հիանալի անձնակազմ։</span>
                             </div>
                             <div class="coment_info">
                                 <div class="coment_name_star">
@@ -376,7 +376,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <span class="coment_info_text">Շատ շնորհակալություն արագ արձագանքելու համար։</span>
+                                <span class="coment_info_text">Շնորհակալություն որակյալ ծառայություն մատուցելու համար։</span>
                             </div>  
                         </div>
                     </div>
